[package]
name = "reactord"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ctrlc = "3.5.1"
futures = "0.3.31"
pipewire = "0.9.2"
tokio = { version = "1.48.0", features = ["sync", "signal", "rt", "macros", "rt-multi-thread"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"]}
